--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ app/release/albbnb.apk
 app/release/baselineProfiles/0/app-release.dm
 app/release/baselineProfiles/1/app-release.dm
 app/release/output-metadata.json
+app/google-services.json
